# Re-AsulCFGManager

./: .gitignore  .gitmodules  AsulCFGManager.cpp  AsulCFGManager.h  AsulCFGManager.pro  CMakeLists.txt  README.md  Resource.qrc  main.cpp
.cache/clangd/index/: AsulCFGManager.cpp.A4529FBCB28A6E59.idx  AsulCFGManager.h.F2A00446F4548CD7.idx  AsulWindow.cpp.B721608745DEE9B0.idx  AsulWindow.h.0C9B6E2DF1274259.idx  BanElaComboBox.cpp.4CD27BAF5C5BB798.idx  BanElaComboBox.h.BE62CA056A600DDE.idx  BaseInclude.h.80C1DA49B9F60053.idx  BaseScrollpage.cpp.8ACD5E60D08869C8.idx  BaseScrollpage.h.235C4546AFD28722.idx  Def.h.D63B61B89BD58519.idx  ElaAcrylicUrlCard.h.7F70DA54C8279E5E.idx  ElaAppBar.h.F1A749878D04C2B7.idx  ElaApplication.h.7D9EF9830450302B.idx  ElaComboBox.h.60D93C9C51D5CFBB.idx  ElaContentDialog.h.DE3E37F9B8E372F8.idx  ElaFlowLayout.h.3F8362DE4490167B.idx  ElaIconButton.h.8B16891301F082F4.idx  ElaImageCard.h.8B865B1AF03C7932.idx  ElaKeyBinder.h.A671B3A61D41B8F8.idx  ElaLineEdit.h.E8E5875A4E48D37B.idx  ElaListView.h.FD4BD657DCD7DDCA.idx  ElaLog.h.5B3D4710E40B3236.idx  ElaMenu.h.665E89A3E245E27F.idx  ElaMessageBar.h.113AF931733F06C3.idx  ElaMessageButton.h.F3B39285B4120405.idx  ElaNavigationRouter.h.304056EA86D9CC98.idx  ElaPlainTextEdit.h.CBCA71D00A9BBC1E.idx  ElaPopularCard.h.9612A59557BCEDAE.idx  ElaProgressBar.h.171793EDA710E749.idx  ElaPushButton.h.BE9BC345012CFEB9.idx  ElaScrollArea.h.060EE112FB3283C2.idx  ElaScrollPage.h.901802C01B27429E.idx  ElaScrollPageArea.h.639AA57A5A921A7B.idx  ElaText.h.ABA9C1B42446A587.idx  ElaTheme.h.05041486826023D9.idx  ElaToggleButton.h.328B2B25479657B9.idx  ElaToggleSwitch.h.09C3B34562B59973.idx  ElaToolButton.h.A76CAA833A44A2FF.idx  ElaToolTip.h.1F9C82E4DB423BDF.idx  ElaWidget.h.6CD1F7431B68EB97.idx  (+64 more)
.github/workflows/: qt-cmake-winonly.yml
3rd/ValveFileVDF-1.1.1/: Readme.md  ValveFileVDF.pri  ValveFileVDF.pro
3rd/ValveFileVDF-1.1.1/tests/: CMakeLists.txt  vdf_parser_test.cpp
3rd/qmarkdowntextedit/: markdownhighlighter.cpp
Headers/: AsulWindow.h  BanElaComboBox.h  BaseInclude.h  BaseScrollpage.h  F_Collector.h  F_SteamAvatarFetcher.h  F_SteamUserQuery.h  F_SystemInfo.h  F_Translator.h  GlobalSettings.h  LaunchWorker.h  T_About.h  T_CFGSettings.h  T_Deploy.h  T_FormatHelp.h  T_Home.h  T_Home2.h  T_Manage.h  T_Setting.h  T_SplashScreen.h  T_UserSetting.h  W_DragFrame.h  W_SCFGTransformer.h
Md/: formatHelp_en_US.md  formatHelp_zh_CN.css  formatHelp_zh_CN.html  formatHelp_zh_CN.md
Sources/: AsulWindow.cpp  BanElaComboBox.cpp  BaseScrollpage.cpp  F_Collector.cpp  F_SteamAvatarFetcher.cpp  F_SteamUserQuery.cpp  F_Translator.cpp  GlobalSettings.cpp  T_About.cpp  T_BasePage.cpp  T_CFGSettings.cpp  T_Deploy.cpp  T_FormatHelp.cpp  T_Home.cpp  T_Home2.cpp  T_Manage.cpp  T_Setting.cpp  T_SplashScreen.cpp  T_UserSetting.cpp  W_DragFrame.cpp  W_SCFGTransformer.cpp
Tools/: getPerfectPath.bat
Uac/: res.rc  res_withoutUAC.rc
install/include/: ElaContentDialog.h  ElaWindow.h
translations/: AM_en_US.qm  AM_en_US.ts  AM_ru_RU.qm  AM_ru_RU.ts  AM_zh_CN.qm  AM_zh_CN.ts
